<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_autoSaveCategory"
        android:title="@string/pref_autosaveCategoryTitle" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_autoSavePosition"
            android:summary="@string/pref_autoSavePositionSummary"
            android:title="@string/pref_autoSavePositionTitle" />

        <com.cachirulop.whereiparked.preferences.BluetoothDevicePreference
            android:dialogTitle="@string/pref_bluetoothDeviceSummary"
            android:key="pref_bluetoothDeviceList"
            android:title="@string/pref_bluetoothDeviceTitle"
            android:dependency="pref_autoSavePosition"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_mapCategory"
        android:title="@string/pref_mapCategoryTitle" >
        <ListPreference 
            android:key="pref_mapMode"/>
        
		<EditTextPreference
            android:defaultValue="/sdcard/maps"
            android:key="pref_mapFilesPath"
            android:summary="@string/pref_mapFilesPathSummary"
            android:title="@string/pref_mapFilesPathTitle" />
    </PreferenceCategory>
</PreferenceScreen>